--- a/index.html
+++ b/index.html
@@ -3,9 +3,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Olivia Ros</title>
+    
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <select name="" id=""></select>
+    <header class="container-fluid bg-dark">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+                <a class="navbar-brand" href="#">
+                    <img src="assets/img/logo.png" alt="Logo Olivia Ros">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Acerca de mi <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Trabajos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="hero text-light text-right">
+            <div class="container">
+                <h1 class="font-weight-bold mb-5">Comidas del fin del mundo</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero doloribus ea ullam earum nemo! Veritatis delectus odio asperiores totam soluta quam dolorem alias qui ducimus quisquam. Harum iste asperiores molestias!</p>
+
+                <a href="#" class="btn btn-outline-info">Trabajos</a>
+                <a href="#" class="btn btn-info">Contacto</a>
+            </div>
+        </section>
+
+        <section class="carousel-content container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>Me has visto en</h3>
+                </div>
+                <div class="col-md-8 bg-dark">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        </ol>
+                        <div class="carousel-inner text-light text-center">
+                          <div class="carousel-item active">
+                            <ul class="list-unstyled row">
+                                <li class="col-3">
+                                    <i class="fab fa-napster" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Napster"></i>
+                                </li>
+                                <li class="col-3">
+                                    <i class="fab fa-apple" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Apple"></i>
+                                </li>
+                                <li class="col-3">
+                                    <i class="fab fa-dropbox" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Dropbox"></i>
+                                </li>
+                                <li class="col-3">
+                                    <i class="fab fa-google" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Google"></i>
+                                </li>
+                            </ul>
+                          </div>
+                          <div class="carousel-item">
+                            <ul class="list-unstyled row">
+                                <li class="col-3">
+                                    <i class="fab fa-github" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Github"></i>
+                                </li>
+                                <li class="col-3">
+                                    <i class="fab fa-linux" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Linux"></i>
+                                </li>
+                                <li class="col-3">
+                                    <i class="fab fa-spotify" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Spotify"></i>
+                                </li>
+                                <li class="col-3">
+                                    <i class="fab fa-ubuntu" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Ubuntu"></i>
+                                </li>
+                            </ul>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="about py-5">
+            <div class="container text-center">
+                <h2 class="display-3 font-weight-bold">Acerca de mi</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint qui, velit suscipit nulla quis natus a consectetur deserunt. Unde, corrupti nobis. Esse possimus sed ullam tempora sint deleniti, obcaecati reprehenderit?</p>
+
+                <ul class="row p-0">
+                    <li class="col-md-4 list-unstyled">
+                        <i class="fas fa-camera"></i>
+                        <h4>Fotógrafa de comida</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae possimus, unde labore adipisci rerum molestiae consequatur quos voluptatibus pariatur soluta distinctio fugiat?</p>
+                    </li>
+                    <li class="col-md-4 list-unstyled">
+                        <i class="fas fa-bullhorn"></i>
+                        <h4>Crítica culinaria</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem dolore itaque eos, quidem suscipit magni culpa nisi rerum obcaecati recusandae totam?</p>
+                    </li>
+                    <li class="col-md-4 list-unstyled">
+                        <i class="fas fa-map"></i>
+                        <h4>Bloggera de viajes</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime optio quas consequatur voluptates velit est quisquam non, ducimus ipsa odio.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
